--- a/index.html
+++ b/index.html
@@ -36,7 +36,62 @@
             </div>
           </nav>
     </header>    
-
+  <main class="mx-auto">
+    <section class="container-fluid top-player">
+      <p>top player</p>
+       <div class="row">
+         <div class="col-md-4 col-sm-6 p-3 col-sm-6 player d-flex align-items-center">
+           <img src="images/photos/profile1.png" alt="">
+           <p class="ps-3">player-1</p>
+         </div>
+         <div class="col-md-4 col-sm-6 p-3 col-sm-6 player d-flex align-items-center">
+           <img src="images/photos/profile2.png" alt="">
+           <p class="ps-3">player-1</p>
+         </div>
+         <div class="col-md-4 col-sm-6 p-3 col-sm-6 player d-flex align-items-center">
+           <img src="images/photos/profile3.png" alt="">
+           <p class="ps-3">player-1</p>
+         </div>
+         <div class="col-md-4 col-sm-6 p-3 col-sm-6 player d-flex align-items-center">
+           <img src="images/photos/profile4.png" alt="">
+           <p class="ps-3">player-1</p>
+         </div>
+         <div class="col-md-4 col-sm-6 p-3 col-sm-6 player d-flex align-items-center">
+           <img src="images/photos/profile5.png" alt="">
+           <p class="ps-3">player-1</p>
+         </div>
+         <div class="col-md-4 col-sm-6 p-3 col-sm-6 player d-flex align-items-center">
+           <img src="images/photos/profile6.png" alt="">
+           <p class="ps-3">player-1</p>
+         </div>
+       </div>
+        <div class="blog">
+          <p>Top blogs</p>
+          <div class="row">
+            <div class="col-md-6 d-flex align-items-center">
+              <img src="images/blogs/Group 2.png" alt="">
+              <p class="ps-3">Lorem ipsum dolor sit amet.</p>
+              <p class="ps-3">Lorem ipsum dolor sit amet.</p>
+            </div>
+            <div class="col-md-6 d-flex align-items-center ">
+              <img src="images/blogs/Mask Group-1.png" alt="">
+              <p class="ps-3">Lorem ipsum dolor sit amet.</p>
+              <p class="ps-3">Lorem ipsum dolor sit amet.</p>
+            </div>
+            <div class="col-md-6 d-flex align-items-center"> 
+              <img src="images/blogs/Mask Group-2.png" alt="">
+              <p class="ps-3">Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia, commodi.</p>
+              <p class="ps-3">Lorem ipsum dolor sit amet.</p>
+            </div>
+            <div class="col-md-6 d-flex align-items-center">
+              <img src="images/blogs/Mask Group.png" alt="">
+              <p class="ps-3">Lorem ipsum dolor sit amet.</p>
+              <p class="ps-3">Lorem ipsum dolor sit amet.</p>
+            </div>
+          </div>
+          </div>
+    </section>
+  </main>
 
 
 
@@ -44,6 +99,6 @@
 
 
      
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pp1jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
 </body>
 </html>
